--- a/devFragments/navbar/package.json
+++ b/devFragments/navbar/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "echo \"Production start not implemented yet\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.dev.js --port 8235",
+    "dev": "concurrently --kill-others --kill-others-on-fail -n client,server \"npm run dev:client\" \"npm run dev:server\"",
+    "dev:client": "webpack-dev-server --config ./webpack.dev.js --port 8235",
+    "dev:server": "nodemon --ignore ./build/ --exec \"webpack --config ./webpack.server.js && node server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@reach/router": "1.2.1",
-    "kremling": "1.0.4",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-router": "4.3.1",
     "single-spa-react": "^2.10.2"
   },
@@ -22,16 +25,11 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "7.0.0",
-    "autoprefixer": "9.1.5",
+    "@babel/preset-react": "^7.6.3",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.0",
-    "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "1.0.0",
-    "kremling-loader": "0.1.1",
-    "postcss-loader": "3.0.0",
-    "style-loader": "0.23.0",
+    "concurrently": "^5.0.0",
+    "nodemon": "^1.19.4",
     "webpack": "^4.30.0",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "^3.3.1",
