--- a/adapters/vuejs/package.json
+++ b/adapters/vuejs/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-modules-umd": "^7.2.0",
+    "@babel/plugin-transform-modules-umd": "7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@types/jest": "^24.0.15",
     "babel-jest": "^24.8.0",
