--- a/registry/package.json
+++ b/registry/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "config": "^3.2.3",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
