--- a/.editorconfig
+++ b/.editorconfig
@@ -3,18 +3,24 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-# Indentation override for all JS
-[*.{js,ts,tsx}]
 charset = utf-8
+end_of_line = crlf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
+
+[*.html]
 indent_style = space
 indent_size = 4
 
-# Matches the exact files either package.json
+[*.{js,ts,tsx}]
+indent_style = space
+indent_size = 4
+
 [*.{json,json5}]
 indent_style = space
 indent_size = 4
