--- a/registry/package.json
+++ b/registry/package.json
@@ -15,7 +15,7 @@
     "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run migrate && npm run seed",
-    "assetsdiscovery": "NODE_ENV=production interval=2000 node ./build/server/runnerAppAssetsDiscovery.js"
+    "assetsdiscovery": "NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAppAssetsDiscovery.js"
   },
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
