--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 12.13.0
+before_install:
+  - "npm config set spin false"
 before_script:
   - npm run build
   - cd registry
