--- a/registry/package.json
+++ b/registry/package.json
@@ -13,7 +13,7 @@
     "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
     "seed": "knex --knexfile config/knexfile.ts seed:run",
     "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-    "test": "NODE_ENV=test mocha --exit",
+    "test": "NODE_ENV=test mocha --reporter nyan --exit",
     "postinstall": "npm run migrate && npm run seed"
   },
   "author": "Vladlen Fedosov",
