--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 12.13.0
 before_install:
-  - "npm config set spin true"
+  - "npm config set spin false"
 before_script:
   - npm run build
   - cd registry
