--- a/ilc/package.json
+++ b/ilc/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "config": "^3.2.3",
-    "construct-style-sheets-polyfill": "^2.3.2",
     "cross-env": "^6.0.3",
     "error-extender": "^1.0.2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "node-tailor": "3.9.2",
     "single-spa": "^4.4.1",
-    "systemjs": "^6.1.5"
+    "systemjs": "^4.1.1",
+    "systemjs-css-extra": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
