--- a/registry/package.json
+++ b/registry/package.json
@@ -13,7 +13,7 @@
     "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
     "seed": "knex --knexfile config/knexfile.ts seed:run",
     "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-    "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./test/**/*.ts --exit",
+    "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./tests/**/*.ts --exit",
     "postinstall": "npm run migrate && npm run seed",
     "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAppAssetsDiscovery.js"
   },
