--- a/.github/workflows/registry_test.yml
+++ b/.github/workflows/registry_test.yml
@@ -20,7 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         cd ./registry/
-        npm install --ignore-scripts
+        npm install
         npm test
       env:
         CI: true
