--- a/.github/workflows/registry_test.yml
+++ b/.github/workflows/registry_test.yml
@@ -17,10 +17,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install
+        run: |
+          cd ./registry/
+          npm install
+        env:
+          CI: true
+    - name: npm test
       run: |
-        cd ./registry/
-        npm install
         npm test
-      env:
-        CI: true
