--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ node_js:
   - 12.13.0
 before_install:
   - npm i -g npm@6.12.0
+install:
+  - cd registry
+  - npm install
 before_script:
   - cd registry
