--- a/devFragments/people/package.json
+++ b/devFragments/people/package.json
@@ -37,7 +37,6 @@
     "style-loader": "0.23.0",
     "webpack": "^4.30.0",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "^3.1.14",
-    "wrapper-webpack-plugin": "^2.1.0"
+    "webpack-dev-server": "^3.1.14"
   }
 }
