--- a/devFragments/planets/package.json
+++ b/devFragments/planets/package.json
@@ -29,7 +29,6 @@
     "vue-template-compiler": "2.5.17",
     "webpack": "^4.30.0",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "wrapper-webpack-plugin": "^2.1.0"
+    "webpack-dev-server": "^3.1.14"
   }
 }
