--- a/.github/workflows/registry_test.yml
+++ b/.github/workflows/registry_test.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Docker registry auth
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login --username stylet --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login --username stylet --password-stdin docker.pkg.github.com
 
     - name: Build the Docker image
       run: |
