--- a/registry/package.json
+++ b/registry/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "registry",
-  "version": "1.0.0",
-  "description": "",
-  "main": "build/index.js",
-  "scripts": {
-    "tsc": "tsc",
-    "compile": "tsc --incremental",
-    "dev": "nodemon -e ts,json5 --exec \"tsc --incremental && npm run start\"",
-    "start": "node -r source-map-support/register ./build/server/index.js",
-    "knex": "knex",
-    "migrate": "knex --knexfile config/knexfile.ts migrate:latest",
-    "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
-    "seed": "knex --knexfile config/knexfile.ts seed:run",
-    "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-    "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./tests/**/*.ts --exit --timeout 5000",
-    "postinstall": "npm run migrate && npm run seed",
-    "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAppAssetsDiscovery.js"
-  },
-  "author": "Vladlen Fedosov",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@types/chai": "4.2.7",
-    "@types/config": "0.0.34",
-    "@types/express": "^4.17.1",
-    "@types/hapi__joi": "^16.0.3",
-    "@types/lodash": "^4.14.144",
-    "@types/mocha": "5.2.7",
-    "@types/supertest": "2.0.8",
-    "chai": "4.2.0",
-    "cross-env": "6.0.3",
-    "mocha": "6.2.2",
-    "nodemon": "^1.19.4",
-    "supertest": "4.0.2",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4"
-  },
-  "dependencies": {
-    "@hapi/joi": "^16.1.7",
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "config": "^3.2.3",
-    "express": "^4.17.1",
-    "http-shutdown": "^1.2.1",
-    "knex": "^0.19.5",
-    "lodash": "^4.17.15",
-    "source-map-support": "^0.5.13",
-    "sqlite3": "^4.1.0"
-  }
+    "name": "registry",
+    "version": "1.0.0",
+    "description": "",
+    "main": "build/index.js",
+    "scripts": {
+        "tsc": "tsc",
+        "compile": "tsc --incremental",
+        "dev": "nodemon -e ts,json5 --exec \"tsc --incremental && npm run start\"",
+        "start": "node -r source-map-support/register ./build/server/index.js",
+        "knex": "knex",
+        "migrate": "knex --knexfile config/knexfile.ts migrate:latest",
+        "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
+        "seed": "knex --knexfile config/knexfile.ts seed:run",
+        "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
+        "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./tests/**/*.ts --exit --timeout 5000",
+        "test:ci": "npm run migrate && npm run test",
+        "postinstall": "npm run migrate && npm run seed",
+        "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAppAssetsDiscovery.js"
+    },
+    "author": "Vladlen Fedosov",
+    "license": "Apache-2.0",
+    "devDependencies": {
+        "@types/chai": "4.2.7",
+        "@types/config": "0.0.34",
+        "@types/express": "^4.17.1",
+        "@types/hapi__joi": "^16.0.3",
+        "@types/lodash": "^4.14.144",
+        "@types/mocha": "5.2.7",
+        "@types/supertest": "2.0.8",
+        "chai": "4.2.0",
+        "cross-env": "6.0.3",
+        "mocha": "6.2.2",
+        "nodemon": "^1.19.4",
+        "supertest": "4.0.2",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.4"
+    },
+    "dependencies": {
+        "@hapi/joi": "^16.1.7",
+        "axios": "^0.19.0",
+        "body-parser": "^1.19.0",
+        "config": "^3.2.3",
+        "express": "^4.17.1",
+        "http-shutdown": "^1.2.1",
+        "knex": "^0.19.5",
+        "lodash": "^4.17.15",
+        "source-map-support": "^0.5.13",
+        "sqlite3": "^4.1.0"
+    }
 }
