--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Docker registry auth
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login --username stylet --password-stdin docker.pkg.github.com
+      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login --username stylet --password-stdin
 
     - name: Build the Docker image
       run: |
@@ -36,6 +36,6 @@ jobs:
 
         for i in ${TAGS//,/ }
         do
-            docker tag registry:tmp docker.pkg.github.com/stylet/icl/registry:$i
-            docker push docker.pkg.github.com/stylet/icl/registry:$i
+            docker tag registry:tmp stylet/ilc_registry:$i
+            docker push stylet/ilc_registry:$i
         done
