--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -1,5 +1,14 @@
 {
     registry: {
         address: 'REGISTRY_ADDR',
+    },
+    nginxRegistration: {
+        enabled: {
+            __name: 'NGINX_REGISTRATION_ENABLED',
+            __format: 'json'
+        },
+        apiAddr: 'NGINX_API_ADDR',
+        upstreamName: 'NGINX_UPSTREAM_NAME',
+        myAddr: 'NGINX_MY_ADDR',
     }
 }
