--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -1,8 +1,14 @@
 {
-  productionMode: true,
-  port: 8233,
-  cdnUrl: null,
-  registry: {
-    address: 'http://127.0.0.1:4001',
-  }
+    productionMode: true,
+    port: 8233,
+    cdnUrl: null,
+    registry: {
+        address: 'http://127.0.0.1:4001'
+    },
+    nginxRegistration: {
+        enabled: false,
+        apiAddr: null,
+        upstreamName: null,
+        myAddr: null
+    }
 }
