--- a/registry/package.json
+++ b/registry/package.json
@@ -38,6 +38,7 @@
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
+        "@types/url-join": "^4.0.0",
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
         "config": "^3.2.3",
