--- a/ilc/package.json
+++ b/ilc/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
-    "error-extender": "^1.0.2",
+    "@namecheap/error-extender": "^1.1.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
