--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -10,5 +10,8 @@
         apiAddr: null,
         upstreamName: null,
         myAddr: null
+    },
+    newrelic: {
+        licenseKey: null,
     }
 }
