--- a/ilc/package.json
+++ b/ilc/package.json
@@ -14,13 +14,14 @@
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
   "dependencies": {
+    "@namecheap/error-extender": "^1.1.1",
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
-    "@namecheap/error-extender": "^1.1.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
+    "newrelic": "^6.2.0",
     "nginx-plus-dynamic-upstream": "^1.0.1",
     "node-tailor": "3.9.2",
     "single-spa": "^4.4.1",
