--- a/registry/package.json
+++ b/registry/package.json
@@ -46,6 +46,7 @@
         "http-shutdown": "^1.2.1",
         "knex": "^0.19.5",
         "lodash": "^4.17.15",
+        "newrelic": "^6.2.0",
         "source-map-support": "^0.5.13",
         "sqlite3": "^4.1.0",
         "url-join": "^4.0.1"
