--- a/ilc/package.json
+++ b/ilc/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
@@ -27,7 +28,8 @@
     "single-spa": "^4.4.1",
     "systemjs": "^6.1.5",
     "systemjs-css-extra": "^1.0.2",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
