--- a/ilc/.babelrc
+++ b/ilc/.babelrc
@@ -5,6 +5,12 @@
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-private-methods"
-  ]
+    "@babel/plugin-proposal-private-methods",
+    [
+      "@babel/plugin-transform-runtime", {
+        "regenerator": true
+      }
+    ]
+  ],
+  "sourceType": "unambiguous"
 }
