--- a/ilc/package.json
+++ b/ilc/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
+    "device-detector-js": "^2.0.5",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
@@ -28,14 +30,17 @@
     "single-spa": "^4.4.1",
     "systemjs": "^6.1.5",
     "systemjs-css-extra": "^1.0.2",
-    "url-join": "^4.0.1"
+    "url-join": "^4.0.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-private-methods": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.6.3",
+    "@babel/runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
     "nodemon": "^1.19.4",
     "raw-loader": "^3.1.0",
