--- a/ilc/package.json
+++ b/ilc/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
+    "device-detector-js": "^2.0.5",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
