--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -9,4 +9,4 @@ RUN npm install --no-package-lock --no-progress --ignore-scripts
 RUN npm install sqlite3 mysql
 RUN npm run compile
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "start-docker"]
