--- a/registry/package.json
+++ b/registry/package.json
@@ -8,6 +8,7 @@
         "compile": "tsc --incremental",
         "dev": "nodemon -e ts,json5 --exec \"tsc --incremental && npm run start\"",
         "start": "node -r source-map-support/register ./build/server/index.js",
+        "start-docker": "npm run migrate && npm start",
         "knex": "knex",
         "migrate": "knex --knexfile config/knexfile.ts migrate:latest",
         "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
