--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -9,7 +9,8 @@
         enabled: false,
         apiAddr: null,
         upstreamName: null,
-        myAddr: null
+        myIp: null,
+        myPort: null
     },
     newrelic: {
         licenseKey: null,
