--- a/ilc/config/custom-environment-variables.json5
+++ b/ilc/config/custom-environment-variables.json5
@@ -8,7 +8,7 @@
             __name: 'NGINX_REGISTRATION_ENABLED',
             __format: 'json'
         },
-        apiAddr: 'NGINX_API_ADDR',
+        apiAddrs: 'NGINX_API_ADDRS',
         upstreamName: 'NGINX_UPSTREAM_NAME',
         myIp: 'NGINX_MY_IP',
         myPort: 'NGINX_MY_PORT',
