--- a/ilc/config/default.json5
+++ b/ilc/config/default.json5
@@ -7,7 +7,7 @@
     },
     nginxRegistration: {
         enabled: false,
-        apiAddr: null,
+        apiAddrs: null,
         upstreamName: null,
         myIp: null,
         myPort: null
