fix: using mapbox scroll-restorer

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "@mapbox/scroll-restorer": "1.0.0"
+  },
   "devDependencies": {
     "concurrently": "4.0.1"
   }
