--- a/ilc/package.json
+++ b/ilc/package.json
@@ -14,6 +14,7 @@
   "author": "Vladlen Fedosov",
   "license": "Apache-2.0",
   "dependencies": {
+    "@mapbox/scroll-restorer": "1.0.0",
     "@namecheap/error-extender": "^1.1.1",
     "axios": "^0.19.0",
     "config": "^3.2.3",
