--- a/ilc/package.json
+++ b/ilc/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.0",
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
+    "deepmerge": "4.2.2",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
