--- a/ilc/package.json
+++ b/ilc/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' server.js",
+    "start": "node --max-http-header-size 30000 server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server.js",
     "build": "rimraf public && npm run build:client && npm run build:systemjs",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js"
