--- a/ilc/package.json
+++ b/ilc/package.json
@@ -2,11 +2,11 @@
   "name": "ilc",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-http-header-size 30000 server.js",
-    "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server.js",
+    "start": "node --max-http-header-size 30000 server/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:client && npm run build:systemjs",
     "build:client": "webpack --config build/webpack.js --progress --hide-modules",
     "build:systemjs": "node ./systemjs/build.js"
