--- a/ilc/package.json
+++ b/ilc/package.json
@@ -20,6 +20,7 @@
     "config": "^3.2.3",
     "cross-env": "^6.0.3",
     "deepmerge": "4.2.2",
+    "device-detector-js": "^2.1.1",
     "express": "^4.17.1",
     "http-shutdown": "^1.2.1",
     "lodash": "^4.17.15",
