--- a/ilc/package.json
+++ b/ilc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:client && npm run build:systemjs",
@@ -40,10 +40,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.8.3",
     "@babel/runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
     "nodemon": "^1.19.4",
     "raw-loader": "^3.1.0",
+    "sinon": "^8.1.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2"
