Add test:ci npm script

--- a/ilc/.mocharc.json
+++ b/ilc/.mocharc.json
@@ -1,4 +1,6 @@
 {
     "spec": "./spec/**/*.spec.js",
-    "require": "@babel/register"
+    "require": "@babel/register",
+    "timeout": 5000,
+    "exit": true
 }
