--- a/ilc/package.json
+++ b/ilc/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "cross-env NODE_ENV=test mocha",
+    "test:ci": "npm run test",
     "start": "node --max-http-header-size 30000 server/app.js",
     "dev": "cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/app.js",
     "build": "rimraf public && npm run build:client && npm run build:systemjs",
