feat: node-tailor -> tailorx

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -26,10 +26,10 @@
     "lodash": "^4.17.15",
     "newrelic": "^6.2.0",
     "nginx-plus-dynamic-upstream": "^2.0.0",
-    "node-tailor": "3.9.2",
     "single-spa": "^4.4.1",
     "systemjs": "^6.1.5",
     "systemjs-css-extra": "^1.0.2",
+    "tailorx": "^4.1.0",
     "url-join": "^4.0.1",
     "uuid": "^3.3.3"
   },
