Move the test near the file

--- a/ilc/.mocharc.json
+++ b/ilc/.mocharc.json
@@ -1,6 +1,6 @@
 {
-    "spec": "./spec/**/*.spec.js",
+    "spec": "**/*.spec.js",
     "require": "@babel/register",
     "timeout": 5000,
-    "exit": true
+    "exclude": "node_modules/**/*"
 }
