Replace js with ts at nycrc

--- a/registry/.nycrc.json
+++ b/registry/.nycrc.json
@@ -5,7 +5,7 @@
     "lines": 90,
     "per-file": true,
     "exclude": [
-        "**/*.spec.js",
+        "**/*.spec.ts",
         "config",
         "build",
         "node_modules"
