--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Docker registry auth
-      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login --username stylet --password-stdin
+      run: echo "${{ secrets.DOCKER_HUB_TOKEN_NC }}" | docker login --username namecheaprnd --password-stdin
 
     - name: Build the Docker image
       run: |
@@ -36,6 +36,6 @@ jobs:
 
         for i in ${TAGS//,/ }
         do
-            docker tag registry:tmp stylet/ilc_registry:$i
-            docker push stylet/ilc_registry:$i
+            docker tag registry:tmp namecheap/ilc_registry:$i
+            docker push namecheap/ilc_registry:$i
         done
