--- a/registry/package.json
+++ b/registry/package.json
@@ -28,7 +28,7 @@
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^16.0.3",
         "@types/lodash": "^4.14.144",
-        "@types/mocha": "5.2.7",
+        "@types/mocha": "^7.0.1",
         "@types/nock": "^11.1.0",
         "@types/supertest": "2.0.8",
         "chai": "4.2.0",
@@ -39,10 +39,11 @@
         "nyc": "^15.0.0",
         "supertest": "4.0.2",
         "ts-node": "^8.4.1",
-        "typescript": "^3.6.4"
+        "typescript": "^3.7.5"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
+        "@types/newrelic": "^6.2.0",
         "@types/url-join": "^4.0.0",
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
