--- a/registry/package.json
+++ b/registry/package.json
@@ -45,6 +45,7 @@
         "@hapi/joi": "^16.1.7",
         "@types/newrelic": "^6.2.0",
         "@types/url-join": "^4.0.0",
+        "@types/uuid": "^3.4.7",
         "axios": "^0.19.0",
         "body-parser": "^1.19.0",
         "config": "^3.2.3",
@@ -55,6 +56,7 @@
         "newrelic": "^6.2.0",
         "source-map-support": "^0.5.13",
         "sqlite3": "^4.1.0",
-        "url-join": "^4.0.1"
+        "url-join": "^4.0.1",
+        "uuid": "^3.4.0"
     }
 }
