--- a/registry/package.json
+++ b/registry/package.json
@@ -39,7 +39,7 @@
         "nyc": "^15.0.0",
         "supertest": "4.0.2",
         "ts-node": "^8.4.1",
-        "typescript": "^3.7.5"
+        "typescript": "3.7.5"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
