chore: stdout-mq added to the Dockerfile

--- a/ilc/Dockerfile
+++ b/ilc/Dockerfile
@@ -8,4 +8,7 @@ WORKDIR /codebase
 RUN npm install --no-package-lock --no-progress
 RUN npm run build
 
+# Legacy infrastructure support
+RUN npm install -g stdout-mq@^2.1.0
+
 CMD ["npm", "start"]
