--- a/devFragments/navbar/package.json
+++ b/devFragments/navbar/package.json
@@ -17,7 +17,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router": "4.3.1",
-    "single-spa-react": "^2.10.2"
+    "single-spa-react": "^2.10.2",
+    "wrapper-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
