--- a/devFragments/news-ssr/package.json
+++ b/devFragments/news-ssr/package.json
@@ -28,7 +28,8 @@
     "vue-meta": "^2.2.1",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wrapper-webpack-plugin": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
