--- a/devFragments/people/package.json
+++ b/devFragments/people/package.json
@@ -16,7 +16,8 @@
     "query-string": "6.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "single-spa-react": "^2.10.2"
+    "single-spa-react": "^2.10.2",
+    "wrapper-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
