--- a/ilc/package.json
+++ b/ilc/package.json
@@ -41,11 +41,10 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-private-methods": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-async-to-promises": "^0.8.15",
     "chai": "^4.2.0",
     "mocha": "^7.0.1",
     "nodemon": "^1.19.4",
